fixed illustration not responsive

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header {
 	margin-top: 70px;
 	max-width: 500px;
 	height: auto;
+	width: 100%;
 }
 
 #copyright {
